--- a/GameOfLife_ShubhamSharma.cbp
+++ b/GameOfLife_ShubhamSharma.cbp
@@ -34,6 +34,8 @@
 		</Compiler>
 		<Unit filename="Cell.cpp" />
 		<Unit filename="Cell.h" />
+		<Unit filename="MainMenu.cpp" />
+		<Unit filename="MainMenu.h" />
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
